display Home categories as per selected from popup

--- a/src/app/components/news-item/news-item.html
+++ b/src/app/components/news-item/news-item.html
@@ -1,7 +1,7 @@
 <ion-item lines="none" class="box-shadow ion-no-padding border-radius" *ngIf="data" (click)="openSinglePost(data)">
   <ion-thumbnail slot="start">
     <img class="border-radius" [src]="data.image" alt="">
-    <span class="border-radius text-uppercase category">{{data.category}}</span>
+    <!-- <span class="border-radius text-uppercase category">{{data.category}}</span> -->
   </ion-thumbnail>
   <ion-label>
     <h2 class="ion-text-wrap text-size-xs text-color-primary margin-bottom">{{data.title}}dfdf</h2>
