--- a/src/app/core/app.component.html
+++ b/src/app/core/app.component.html
@@ -10,7 +10,8 @@
       <ion-content>
         <ion-row class="ion-padding">
           <ion-col size="12" class="ion-align-self-start">
-            <img src="../assets/imgs/deconews.png" alt="">
+            <!-- <img src="../assets/imgs/deconews.png" alt=""> -->
+            <h3 style="color:white">Topz Media</h3> 
           </ion-col>
           <ion-col size="12" class="ion-align-self-center">
             <!-- Menu List -->
@@ -20,7 +21,6 @@
                   <div class="menu-image" slot="start">
                     <img [src]="p.image">
                   </div>
-
                   <ion-label>
                     <h1 class="text-size-xs text-color-primary">{{p.title}}</h1>
                   </ion-label>
