--- a/src/app/pages/category/category.html
+++ b/src/app/pages/category/category.html
@@ -3,8 +3,10 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button defaultHref="/"></ion-menu-button>
+
     </ion-buttons>
-    <ion-title class="ion-text-uppercase">Deco News</ion-title>
+    <ion-title class="ion-text-uppercase">Topz Media</ion-title>
+    
   </ion-toolbar>
 </ion-header>
 <!-- Content -->
