--- a/src/app/components/news-wizard/news-wizard.scss
+++ b/src/app/components/news-wizard/news-wizard.scss
@@ -1,20 +1,30 @@
 :host-context() {
   --width-logo: 150px;
   ion-content {
-    --background: var(--deco-background-dark, #1b1e28);
-    
+    // --background: var(--deco-background-dark, #1b1e28);
   }
 }
 /* Settings Wizard
 ===========================================*/
 
-
-
-ion-slides {
-
+ion-content {
   height: 100%;
   position: relative;
+  ion-checkbox{
+    margin-right:10px;
+  }
+  p {
+    color: var(--deco-background-dark, #1b1e28);
+    
+    // font-weight: 900;
+  }
 
+  h1 {
+    color: var(--deco-background-dark, #1b1e28);
+    font-size: 20px;
+    text-align:center;
+    font-weight: 600;
+  }
   ion-slide {
     position: relative;
   }
@@ -23,33 +33,32 @@ ion-slides {
   ion-card {
     box-shadow: none;
 
-    h1,
-    p {
-      color: #fff;
-      font-weight: 300;
-    }
-
-    h1 {
-      font-size: 24px;
-    }
-    
     ion-avatar {
       margin: 20px auto;
-      width: var( --width-logo, 150px);
-      height: var( --width-logo, 150px);
+      width: var(--width-logo, 150px);
+      height: var(--width-logo, 150px);
     }
+  }
+}
+
+ion-list {
+  ion-item {
+    --background: var(--deco-background-dark, #1b1e28);
+    color: #fff;
   }
 }
 
 // Settings Button
 ion-button {
   --color: #fff;
-  margin-top: -55px;
-  font-size: 16px;
-  font-weight: 300;
-  margin-left: 20px;
-  margin-right: 30px;
-  z-index: 9;
+  --background: #CB0000;
+  // font-size: 16px;
+  font-weight: 900;
+  margin-top:15px;
+  margin-bottom:15px;
+  margin-left:10px;
+  margin-right: 10px;
+  z-index: 5;
   position: relative;
   display: block;
 }
