--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -3,7 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Topz Media</ion-title>
+    <ion-title>Topz Media <ion-icon name="apps" (click)="choseCategory()">
+      </ion-icon>
+    </ion-title>
+
   </ion-toolbar>
   <ion-toolbar>
     <!-- Segment Btton Home Page -->
@@ -52,7 +55,7 @@
       </ion-col>
     </ion-row>
     <!-- Name Category -->
-    <ion-row class="ion-align-items-center"  *ngIf="postsRecentNews.length">
+    <ion-row class="ion-align-items-center" *ngIf="postsRecentNews.length">
       <ion-col class="ion-no-padding">
         <h1 class="ion-padding-start text-size-lg text-color-primary ion-no-margin">
           {{selectedCategory ? selectedCategory.name:""}}</h1>
@@ -64,19 +67,16 @@
     </ion-row>
     <!-- List Category Posts -->
     <ion-row>
-      <ion-col size="6" size-md="4" size-lg="3" *ngFor="let item of postsRecentNews">
-        <news-item-home [data]="item"></news-item-home>
+      <ion-col size="12" *ngFor="let item of postsRecentNews">
+        <news-item [data]="item"></news-item>
       </ion-col>
     </ion-row>
   </ion-grid>
 
-  <news-empty-state
-    *ngIf="isEmptyStateActive()" 
-    [title]="emptyState.title" 
-    [subtitle]="emptyState.subtitle">
+  <news-empty-state *ngIf="isEmptyStateActive()" [title]="emptyState.title" [subtitle]="emptyState.subtitle">
   </news-empty-state>
 
-  <news-loading  *ngIf="initialLoading()"></news-loading>
+  <news-loading *ngIf="initialLoading()"></news-loading>
 
   <ion-infinite-scroll threshold="100px" (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
