--- a/src/app/pages/settings/settings.html
+++ b/src/app/pages/settings/settings.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-menu-button defaultHref="/"></ion-menu-button>
     </ion-buttons>
-    <ion-title class="ion-text-uppercase">Deco New</ion-title>
+    <ion-title class="ion-text-uppercase">Topz Media</ion-title>
   </ion-toolbar>
 </ion-header>
 <!-- Content -->
